@@ -2,12 +2,9 @@ package uk.yermak.audiobookconverter.fx;
 
 import javafx.application.Platform;
 import javafx.beans.InvalidationListener;
-import javafx.beans.value.ChangeListener;
-import javafx.beans.value.ObservableValue;
 import javafx.collections.ObservableList;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
-import javafx.scene.control.CheckBox;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.RadioButton;
 import javafx.scene.control.Slider;
@@ -18,7 +15,7 @@ import uk.yermak.audiobookconverter.*;
 import java.lang.invoke.MethodHandles;
 import java.util.List;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
+
 
 /**
  * Created by yermak on 08/09/2018.
@@ -26,13 +23,15 @@ import java.util.stream.Collectors;
 public class OutputController {
     final static Logger logger = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
     public static final String DISABLED = "Disabled";
-    public static final String FORCE = "Always";
+//    public static final String FORCE = "Always";
+
 
     @FXML
     public ComboBox<Format> outputFormatBox;
     @FXML
     public ComboBox<String> presetBox;
-    public ComboBox<String> force;
+
+    public ComboBox<String> forceBox;
 
     @FXML
     private ComboBox<String> splitFileBox;
@@ -45,90 +44,83 @@ public class OutputController {
     public ComboBox<String> cutoff;
 
     @FXML
-    private ComboBox<String> frequency;
+    private ComboBox<String> frequencyBox;
     @FXML
-    private ComboBox<String> channels;
+    private ComboBox<String> channelsBox;
     @FXML
     private RadioButton cbr;
     @FXML
-    private ComboBox<String> bitRate;
+    private ComboBox<String> bitRateBox;
     @FXML
     private RadioButton vbr;
     @FXML
     private Slider vbrQuality;
-//    private ObservableList<MediaInfo> media;
 
     public void cbr(ActionEvent actionEvent) {
-        bitRate.setDisable(false);
+        bitRateBox.setDisable(false);
         vbrQuality.setDisable(true);
         refreshBitrates();
-        ConverterApplication.getContext().getOutputParameters().setCbr(true);
+        AudiobookConverter.getContext().getOutputParameters().setCbr(true);
 
     }
 
     public void vbr(ActionEvent actionEvent) {
-        bitRate.setDisable(true);
+        bitRateBox.setDisable(true);
         vbrQuality.setDisable(false);
         refreshVbrQuality();
-        ConverterApplication.getContext().getOutputParameters().setCbr(false);
+        AudiobookConverter.getContext().getOutputParameters().setCbr(false);
     }
 
     @FXML
     private void initialize() {
-
         splitFileBox.getSelectionModel().select(0);
         splitFileBox.getSelectionModel().selectedItemProperty().addListener((observableValue, oldValue, newValue) -> {
             switch (newValue) {
-                case "parts" -> ConverterApplication.getContext().getOutputParameters().setSplitChapters(false);
-                case "chapters" -> ConverterApplication.getContext().getOutputParameters().setSplitChapters(true);
+                case "parts" -> AudiobookConverter.getContext().getOutputParameters().setSplitChapters(false);
+                case "chapters" -> AudiobookConverter.getContext().getOutputParameters().setSplitChapters(true);
             }
         });
 
         speedBox.valueProperty().addListener((observableValue, oldValue, newValue) -> {
             if (newValue == null) return;
-            ConverterApplication.getContext().setSpeed(Double.valueOf(newValue));
+            AudiobookConverter.getContext().getOutputParameters().setSpeed(Double.parseDouble(newValue));
         });
-        force.getSelectionModel().select(0);
-        force.valueProperty().addListener(new ChangeListener<String>() {
-            @Override
-            public void changed(ObservableValue<? extends String> observableValue, String oldValue, String newValue) {
-                if (newValue == null) return;
-                ConverterApplication.getContext().getOutputParameters().setForce(FORCE.equals(newValue));
-            }
+        forceBox.getSelectionModel().select(0);
+        forceBox.valueProperty().addListener((observableValue, oldValue, newValue) -> {
+            if (newValue == null) return;
+            AudiobookConverter.getContext().getOutputParameters().setForce(OutputParameters.Force.valueOf(newValue));
         });
 
         outputFormatBox.getItems().addAll(Format.values());
         outputFormatBox.getSelectionModel().select(0);
         outputFormatBox.getSelectionModel().selectedItemProperty().addListener((observableValue, oldValue, newValue) -> {
-            ConverterApplication.getContext().getOutputParameters().setupFormat(newValue);
+            AudiobookConverter.getContext().getOutputParameters().setupFormat(newValue);
             refreshFrequencies();
             refreshBitrates();
             refreshChannels();
             refreshCutoffs();
             refreshVbrQuality();
             refreshCBR();
-
         });
 
         List<Preset> presets = Preset.loadPresets();
-//        String savedPreset = Objects.requireNonNullElse(AppProperties.getProperty("last.preset"), "custom");
-//        Preset lastPreset = presets.stream().filter(preset -> preset.getPresetName().equals(Preset.LAST_USED)).findFirst().get();
 
-        presetBox.getItems().addAll(presets.stream().map(Preset::getName).collect(Collectors.toList()));
+        presetBox.getItems().add(Preset.DEFAULT);
+        presetBox.getItems().addAll(presets.stream().map(Preset::getName).toList());
 
         presetBox.getSelectionModel().select(Preset.DEFAULT);
         presetBox.getSelectionModel().selectedItemProperty().addListener((observableValue, oldValue, newValue) -> {
             if (!presetBox.getItems().contains(newValue)) {
                 presetBox.getItems().add(newValue);
                 Preset preset = Preset.copy(newValue, Preset.instance(oldValue));
-                ConverterApplication.getContext().setOutputParameters(preset);
+                AudiobookConverter.getContext().setOutputParameters(preset);
             } else {
                 Preset preset = Preset.instance(newValue);
-                ConverterApplication.getContext().setOutputParameters(preset);
+                AudiobookConverter.getContext().setOutputParameters(preset);
             }
         });
 
-        ConverterApplication.getContext().addOutputParametersChangeListener((observableValue, oldParams, newParams) -> {
+      /*  AudiobookConverter.getContext().addOutputParametersChangeListener((observableValue, oldParams, newParams) -> {
             outputFormatBox.setValue(newParams.getFormat());
             if (!oldParams.getFormat().equals(newParams.getFormat())) {
                 refreshFrequencies();
@@ -138,7 +130,7 @@ public class OutputController {
                 refreshVbrQuality();
                 refreshCBR();
             }
-        });
+        });*/
 
         refreshFrequencies();
         refreshBitrates();
@@ -148,39 +140,44 @@ public class OutputController {
         refreshCBR();
         refreshSpeeds();
 
-        ConversionContext context = ConverterApplication.getContext();
+        ConversionContext context = AudiobookConverter.getContext();
         ObservableList<MediaInfo> media = context.getMedia();
 
 
-        bitRate.valueProperty().addListener((observable, oldValue, newValue) -> {
-            if (newValue == null) return;
-            context.getOutputParameters().setBitRate(Integer.valueOf(newValue));
+        bitRateBox.valueProperty().addListener((observable, oldValue, newValue) -> {
+            if (newValue != null) {
+                context.getOutputParameters().setBitRate(Integer.valueOf(newValue));
+            }
         });
-        frequency.valueProperty().addListener((observable, oldValue, newValue) -> {
-            if (newValue == null) return;
-            context.getOutputParameters().setFrequency(Integer.valueOf(newValue));
+        frequencyBox.valueProperty().addListener((observable, oldValue, newValue) -> {
+            if (newValue != null) {
+                context.getOutputParameters().setFrequency(Integer.valueOf(newValue));
+            }
         });
-        channels.valueProperty().addListener((observable, oldValue, newValue) -> {
-            if (newValue == null) return;
-            context.getOutputParameters().setChannels(Integer.valueOf(newValue));
+        channelsBox.valueProperty().addListener((observable, oldValue, newValue) -> {
+            if (newValue != null) {
+                context.getOutputParameters().setChannels(Integer.valueOf(newValue));
+            }
         });
         vbrQuality.valueProperty().addListener((observable, oldValue, newValue) -> {
-            if (newValue == null) return;
-            context.getOutputParameters().setVbrQuality((int) Math.round(newValue.doubleValue()));
+            if (newValue != null) {
+                context.getOutputParameters().setVbrQuality((int) Math.round(newValue.doubleValue()));
+            }
         });
         cutoff.valueProperty().addListener((observable, oldValue, newValue) -> {
             if (newValue == null) return;
             if (DISABLED.equals(newValue)) {
-                context.getOutputParameters().setCutoff(null);
+                context.getOutputParameters().setCutoff(0);
             } else {
                 context.getOutputParameters().setCutoff(Integer.valueOf(newValue));
             }
         });
 
         context.addOutputParametersChangeListener((observableValue, oldValue, newValue) -> {
-            bitRate.valueProperty().set(String.valueOf(newValue.getBitRate()));
-            frequency.valueProperty().set(String.valueOf(newValue.getFrequency()));
-            channels.valueProperty().set(String.valueOf(newValue.getChannels()));
+            outputFormatBox.valueProperty().set(newValue.getFormat());
+            bitRateBox.valueProperty().set(String.valueOf(newValue.getBitRate()));
+            frequencyBox.valueProperty().set(String.valueOf(newValue.getFrequency()));
+            channelsBox.valueProperty().set(String.valueOf(newValue.getChannels()));
             vbrQuality.valueProperty().set(newValue.getVbrQuality());
             cutoff.valueProperty().set(String.valueOf(newValue.getCutoff()));
             if (newValue.isCbr()) {
@@ -188,27 +185,32 @@ public class OutputController {
             } else {
                 vbr.fire();
             }
+            speedBox.valueProperty().set(Double.toString(newValue.getSpeed()));
+            forceBox.getSelectionModel().select(newValue.getForce().toString());
+            splitFileBox.getSelectionModel().select(newValue.isSplitChapters() ? "chapters" : "parts");
         });
 
         media.addListener((InvalidationListener) observable -> updateParameters(media));
-        ConverterApplication.getContext().addBookChangeListener((observableValue, oldBook, newBook) -> {
+        AudiobookConverter.getContext().addBookChangeListener((observableValue, oldBook, newBook) -> {
             if (newBook != null) {
                 newBook.addListener(observable -> updateParameters(newBook.getMedia()));
             }
         });
 
-        ConverterApplication.getContext().addOutputParametersChangeListener((observableValue, oldParams, newParams) -> {
-            Format format = ConverterApplication.getContext().getOutputParameters().getFormat();
-            bitRate.setValue(String.valueOf(findNearestMatch(newParams.getBitRate(), format.bitrates(), format.defaultBitrate())));
-            frequency.setValue(String.valueOf(findNearestMatch(newParams.getFrequency(), format.frequencies(), format.defaultFrequency())));
-            channels.setValue(String.valueOf(findNearestMatch(newParams.getChannels(), format.channels(), format.defaultChannel())));
+/*
+        AudiobookConverter.getContext().addOutputParametersChangeListener((observableValue, oldParams, newParams) -> {
+            Format format = AudiobookConverter.getContext().getOutputParameters().getFormat();
+            bitRateBox.setValue(String.valueOf(findNearestMatch(newParams.getBitRate(), format.bitrates(), format.defaultBitrate())));
+            frequencyBox.setValue(String.valueOf(findNearestMatch(newParams.getFrequency(), format.frequencies(), format.defaultFrequency())));
+            channelsBox.setValue(String.valueOf(findNearestMatch(newParams.getChannels(), format.channels(), format.defaultChannel())));
             vbrQuality.setValue(findNearestMatch(newParams.getVbrQuality(), format.vbrQualities(), format.defaultVbrQuality()));
             cutoff.setValue(String.valueOf(findNearestMatch(newParams.getCutoff(), format.cutoffs(), format.defaultCutoff())));
         });
+*/
     }
 
     private void refreshCBR() {
-        Format format = ConverterApplication.getContext().getOutputParameters().getFormat();
+        Format format = AudiobookConverter.getContext().getOutputParameters().getFormat();
         if (format.defaultCBR()) {
             cbr.fire();
         } else {
@@ -217,61 +219,61 @@ public class OutputController {
     }
 
     private void refreshVbrQuality() {
-        Format format = ConverterApplication.getContext().getOutputParameters().getFormat();
+        Format format = AudiobookConverter.getContext().getOutputParameters().getFormat();
         vbrQuality.setValue(format.defaultVbrQuality());
     }
 
     private void refreshCutoffs() {
-        Format format = ConverterApplication.getContext().getOutputParameters().getFormat();
+        Format format = AudiobookConverter.getContext().getOutputParameters().getFormat();
         cutoff.getItems().clear();
         cutoff.getItems().add(DISABLED);
-        cutoff.getItems().addAll(ConverterApplication.getContext().getOutputParameters().getFormat().cutoffs().stream().map(String::valueOf).collect(Collectors.toList()));
+        cutoff.getItems().addAll(AudiobookConverter.getContext().getOutputParameters().getFormat().cutoffs().stream().map(String::valueOf).toList());
         cutoff.getSelectionModel().select(String.valueOf(format.defaultCutoff()));
     }
 
     private void refreshChannels() {
-        Format format = ConverterApplication.getContext().getOutputParameters().getFormat();
-        channels.getItems().clear();
-        channels.getItems().addAll(ConverterApplication.getContext().getOutputParameters().getFormat().channels().stream().map(String::valueOf).collect(Collectors.toList()));
-        channels.getSelectionModel().select(String.valueOf(format.defaultChannel()));
+        Format format = AudiobookConverter.getContext().getOutputParameters().getFormat();
+        channelsBox.getItems().clear();
+        channelsBox.getItems().addAll(AudiobookConverter.getContext().getOutputParameters().getFormat().channels().stream().map(String::valueOf).toList());
+        channelsBox.getSelectionModel().select(String.valueOf(format.defaultChannel()));
     }
 
     private void refreshBitrates() {
-        Format format = ConverterApplication.getContext().getOutputParameters().getFormat();
-        bitRate.getItems().clear();
-        bitRate.getItems().addAll(ConverterApplication.getContext().getOutputParameters().getFormat().bitrates().stream().map(String::valueOf).collect(Collectors.toList()));
-        bitRate.getSelectionModel().select(String.valueOf(format.defaultBitrate()));
+        Format format = AudiobookConverter.getContext().getOutputParameters().getFormat();
+        bitRateBox.getItems().clear();
+        bitRateBox.getItems().addAll(AudiobookConverter.getContext().getOutputParameters().getFormat().bitrates().stream().map(String::valueOf).toList());
+        bitRateBox.getSelectionModel().select(String.valueOf(format.defaultBitrate()));
     }
 
     private void refreshSpeeds() {
-        Format format = ConverterApplication.getContext().getOutputParameters().getFormat();
+        Format format = AudiobookConverter.getContext().getOutputParameters().getFormat();
         speedBox.getItems().clear();
-        speedBox.getItems().addAll(ConverterApplication.getContext().getOutputParameters().getFormat().speeds().stream().map(String::valueOf).collect(Collectors.toList()));
+        speedBox.getItems().addAll(AudiobookConverter.getContext().getOutputParameters().getFormat().speeds().stream().map(String::valueOf).toList());
         speedBox.getSelectionModel().select(String.valueOf(format.defaultSpeed()));
     }
 
     private void refreshFrequencies() {
-        OutputParameters outputParameters = ConverterApplication.getContext().getOutputParameters();
+        OutputParameters outputParameters = AudiobookConverter.getContext().getOutputParameters();
         Format format = outputParameters.getFormat();
-        frequency.getItems().clear();
-        frequency.getItems().addAll(outputParameters.getFormat().frequencies().stream().map(String::valueOf).collect(Collectors.toList()));
-        frequency.getSelectionModel().select(String.valueOf(format.defaultFrequency()));
+        frequencyBox.getItems().clear();
+        frequencyBox.getItems().addAll(outputParameters.getFormat().frequencies().stream().map(String::valueOf).toList());
+        frequencyBox.getSelectionModel().select(String.valueOf(format.defaultFrequency()));
     }
 
     private void updateParameters(List<MediaInfo> media) {
-        Book book = ConverterApplication.getContext().getBook();
+        Book book = AudiobookConverter.getContext().getBook();
 
         if (media.isEmpty() && book == null) {
-            Format format = ConverterApplication.getContext().getOutputParameters().getFormat();
-            frequency.setValue(String.valueOf(format.defaultFrequency()));
-            bitRate.setValue(String.valueOf(format.defaultBitrate()));
-            channels.setValue(String.valueOf(format.defaultChannel()));
+            Format format = AudiobookConverter.getContext().getOutputParameters().getFormat();
+            frequencyBox.setValue(String.valueOf(format.defaultFrequency()));
+            bitRateBox.setValue(String.valueOf(format.defaultBitrate()));
+            channelsBox.setValue(String.valueOf(format.defaultChannel()));
             vbrQuality.setValue(format.defaultVbrQuality());
             return;
         }
 
         Executors.newSingleThreadExecutor().submit(() -> {
-            OutputParameters params = ConverterApplication.getContext().getOutputParameters();
+            OutputParameters params = AudiobookConverter.getContext().getOutputParameters();
             if (book != null) {
                 params.updateAuto(book.getMedia());
 //                book.addListener(observable -> updateParameters(book.getMedia()));
@@ -279,10 +281,10 @@ public class OutputController {
                 params.updateAuto(media);
             }
             Platform.runLater(() -> {
-                Format format = ConverterApplication.getContext().getOutputParameters().getFormat();
-                frequency.setValue(String.valueOf(findNearestMatch(params.getFrequency(), format.frequencies(), format.defaultFrequency())));
-                bitRate.setValue(String.valueOf(findNearestMatch(params.getBitRate(), format.bitrates(), format.defaultBitrate())));
-                channels.setValue(String.valueOf(findNearestMatch(params.getChannels(), format.channels(), format.defaultChannel())));
+                Format format = AudiobookConverter.getContext().getOutputParameters().getFormat();
+                frequencyBox.setValue(String.valueOf(findNearestMatch(params.getFrequency(), format.frequencies(), format.defaultFrequency())));
+                bitRateBox.setValue(String.valueOf(findNearestMatch(params.getBitRate(), format.bitrates(), format.defaultBitrate())));
+                channelsBox.setValue(String.valueOf(findNearestMatch(params.getChannels(), format.channels(), format.defaultChannel())));
                 vbrQuality.setValue(findNearestMatch(params.getVbrQuality(), format.vbrQualities(), format.defaultVbrQuality()));
             });
 
@@ -297,6 +299,11 @@ public class OutputController {
                 return integer;
         }
         return defaultValue;
+    }
+
+    public void savePreset(ActionEvent actionEvent) {
+        Preset preset = new Preset(presetBox.getSelectionModel().getSelectedItem(), AudiobookConverter.getContext().getOutputParameters());
+        AppSetting.savePreset(preset);
     }
 }
 
